@@ -36,13 +36,10 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.DisplayName;
@@ -132,9 +129,9 @@ class RootKeyTest extends RegistryKeyTestBase {
 
             RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER;
             try (Stream<RegistryKey> stream = registryKey.subKeys()) {
-                List<RegistryKey> subKeys = stream.collect(Collectors.toList());
+                List<RegistryKey> subKeys = stream.toList();
 
-                List<RegistryKey> expected = Arrays.asList(
+                List<RegistryKey> expected = List.of(
                         registryKey.resolve("child1"),
                         registryKey.resolve("child2"),
                         registryKey.resolve("child3")
@@ -166,8 +163,7 @@ class RootKeyTest extends RegistryKeyTestBase {
 
             RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER;
             try (Stream<RegistryKey> stream = registryKey.subKeys()) {
-                Collector<RegistryKey, ?, ?> collector = Collectors.toList();
-                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, () -> stream.collect(collector));
+                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, stream::toList);
                 assertEquals("HKEY_CURRENT_USER", exception.path());
             }
         }
@@ -182,9 +178,9 @@ class RootKeyTest extends RegistryKeyTestBase {
         void testMaxDepthIsZero() {
             RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER;
             try (Stream<RegistryKey> stream = registryKey.traverse(0)) {
-                List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                List<RegistryKey> registryKeys = stream.toList();
 
-                List<RegistryKey> expected = Arrays.asList(registryKey);
+                List<RegistryKey> expected = List.of(registryKey);
 
                 assertEquals(expected, registryKeys);
             }
@@ -204,9 +200,9 @@ class RootKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER;
                 try (Stream<RegistryKey> stream = registryKey.traverse(1, RegistryKey.TraverseOption.SUB_KEYS_FIRST)) {
-                    List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                    List<RegistryKey> registryKeys = stream.toList();
 
-                    List<RegistryKey> expected = Arrays.asList(
+                    List<RegistryKey> expected = List.of(
                             registryKey.resolve("subKey1"),
                             registryKey.resolve("subKey2"),
                             registryKey.resolve("subKey3"),
@@ -224,9 +220,9 @@ class RootKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER;
                 try (Stream<RegistryKey> stream = registryKey.traverse(1)) {
-                    List<RegistryKey> registryKeys = stream.collect(Collectors.toList());
+                    List<RegistryKey> registryKeys = stream.toList();
 
-                    List<RegistryKey> expected = Arrays.asList(
+                    List<RegistryKey> expected = List.of(
                             registryKey,
                             registryKey.resolve("subKey1"),
                             registryKey.resolve("subKey2"),
@@ -267,9 +263,9 @@ class RootKeyTest extends RegistryKeyTestBase {
 
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER;
                 try (Stream<RegistryValue> stream = registryKey.values()) {
-                    List<RegistryValue> values = stream.collect(Collectors.toList());
+                    List<RegistryValue> values = stream.toList();
 
-                    List<RegistryValue> expected = Arrays.asList(stringValue, binaryValue, wordValue);
+                    List<RegistryValue> expected = List.of(stringValue, binaryValue, wordValue);
 
                     assertEquals(expected, values);
                 }
@@ -287,9 +283,9 @@ class RootKeyTest extends RegistryKeyTestBase {
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER;
                 RegistryValue.Filter filter = RegistryValue.filter().name(s -> s.contains("i"));
                 try (Stream<RegistryValue> stream = registryKey.values(filter)) {
-                    List<RegistryValue> values = stream.collect(Collectors.toList());
+                    List<RegistryValue> values = stream.toList();
 
-                    List<RegistryValue> expected = Arrays.asList(stringValue, binaryValue);
+                    List<RegistryValue> expected = List.of(stringValue, binaryValue);
 
                     assertEquals(expected, values);
                 }
@@ -307,9 +303,9 @@ class RootKeyTest extends RegistryKeyTestBase {
                 RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER;
                 RegistryValue.Filter filter = RegistryValue.filter().strings().words();
                 try (Stream<RegistryValue> stream = registryKey.values(filter)) {
-                    List<RegistryValue> values = stream.collect(Collectors.toList());
+                    List<RegistryValue> values = stream.toList();
 
-                    List<RegistryValue> expected = Arrays.asList(stringValue, wordValue);
+                    List<RegistryValue> expected = List.of(stringValue, wordValue);
 
                     assertEquals(expected, values);
                 }
@@ -338,8 +334,7 @@ class RootKeyTest extends RegistryKeyTestBase {
 
             RegistryKey registryKey = RegistryKey.HKEY_CURRENT_USER;
             try (Stream<RegistryValue> stream = registryKey.values()) {
-                Collector<RegistryValue, ?, ?> collector = Collectors.toList();
-                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, () -> stream.collect(collector));
+                NoSuchRegistryKeyException exception = assertThrows(NoSuchRegistryKeyException.class, stream::toList);
                 assertEquals("HKEY_CURRENT_USER", exception.path());
             }
         }
